[package]
name = "guessing_game"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Running the cargo doc --open command will build documentation provided by all of your dependencies locally and open it in your browser.
[dependencies]
rand = "0.8.3"